@@ -19,15 +19,20 @@
 
 package net.pms;
 
+import ch.qos.logback.classic.Level;
+import ch.qos.logback.classic.LoggerContext;
 import com.sun.jna.Platform;
 import com.sun.net.httpserver.HttpServer;
 import java.awt.*;
 import java.io.*;
 import java.net.BindException;
+import java.nio.charset.StandardCharsets;
 import java.text.SimpleDateFormat;
 import java.util.*;
 import java.util.List;
 import java.util.Map.Entry;
+import java.util.concurrent.locks.ReadWriteLock;
+import java.util.concurrent.locks.ReentrantReadWriteLock;
 import java.util.logging.LogManager;
 import javax.jmdns.JmDNS;
 import javax.swing.*;
@@ -45,8 +50,9 @@ import net.pms.external.ExternalListener;
 import net.pms.formats.Format;
 import net.pms.formats.FormatFactory;
 import net.pms.io.*;
+import net.pms.logging.CacheLogger;
 import net.pms.logging.FrameAppender;
-import net.pms.logging.LoggingConfigFileLoader;
+import net.pms.logging.LoggingConfig;
 import net.pms.network.ChromecastMgr;
 import net.pms.network.HTTPServer;
 import net.pms.network.ProxyServer;
@@ -57,8 +63,9 @@ import net.pms.update.AutoUpdater;
 import net.pms.util.*;
 import org.apache.commons.configuration.ConfigurationException;
 import org.apache.commons.configuration.event.ConfigurationEvent;
-import org.apache.commons.configuration.event.ConfigurationListener;
-import org.apache.commons.io.FileUtils;
+import org.apache.commons.lang.WordUtils;
+import org.fest.util.Files;
+import org.slf4j.ILoggerFactory;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -135,18 +142,6 @@ public class PMS {
 	 * Pointer to a running PMS server.
 	 */
 	private static PMS instance = null;
-
-	/**
-	 * @deprecated This field is not used and will be removed in the future.
-	 */
-	@Deprecated
-	public final static SimpleDateFormat sdfDate = new SimpleDateFormat("HH:mm:ss.SSS", Locale.US);
-
-	/**
-	 * @deprecated This field is not used and will be removed in the future.
-	 */
-	@Deprecated
-	public final static SimpleDateFormat sdfHour = new SimpleDateFormat("yyyy-MM-dd'T'HH:mm:ss", Locale.US);
 
 	/**
 	 * Array of {@link net.pms.configuration.RendererConfiguration} that have been found by PMS.
@@ -324,22 +319,26 @@ public class PMS {
 			throw new IOException("Cannot write to Java temp directory");
 		}
 
-		LOGGER.info("Logging config file: " + LoggingConfigFileLoader.getConfigFilePath());
+		LOGGER.info("Logging config file: " + LoggingConfig.getConfigFilePath());
 
-		HashMap<String, String> lfps = LoggingConfigFileLoader.getLogFilePaths();
+		HashMap<String, String> lfps = LoggingConfig.getLogFilePaths();
 
-		// debug.log filename(s) and path(s)
+		// Logfile name(s) and path(s)
 		if (lfps != null && lfps.size() > 0) {
 			if (lfps.size() == 1) {
 				Entry<String, String> entry = lfps.entrySet().iterator().next();
-				LOGGER.info(String.format("%s: %s", entry.getKey(), entry.getValue()));
+				if (entry.getKey().toLowerCase().equals("default.log")) {
+					LOGGER.info("Logfile: {}", entry.getValue());
+				} else {
+					LOGGER.info("{}: {}", entry.getKey(), entry.getValue());
+				}
 			} else {
 				LOGGER.info("Logging to multiple files:");
 				Iterator<Entry<String, String>> logsIterator = lfps.entrySet().iterator();
 				Entry<String, String> entry;
 				while (logsIterator.hasNext()) {
 					entry = logsIterator.next();
-					LOGGER.info(String.format("%s: %s", entry.getKey(), entry.getValue()));
+					LOGGER.info("{}: {}", entry.getKey(), entry.getValue());
 				}
 			}
 		}
@@ -366,7 +365,9 @@ public class PMS {
 		 * usually done by the installer
 		 */
 		File dDir = new File(configuration.getDataDir());
-		dDir.mkdirs();
+		if (!dDir.exists() && !dDir.mkdirs()) {
+			LOGGER.error("Failed to create profile folder \"{}\"", configuration.getDataDir());
+		}
 
 		dbgPack = new DbgPacker();
 		tfm = new TempFileMgr();
@@ -637,10 +638,10 @@ public class PMS {
 		}
 
 		// Disable jaudiotagger logging
-		LogManager.getLogManager().readConfiguration(new ByteArrayInputStream("org.jaudiotagger.level=OFF".getBytes()));
+		LogManager.getLogManager().readConfiguration(new ByteArrayInputStream("org.jaudiotagger.level=OFF".getBytes(StandardCharsets.US_ASCII)));
 
 		// Wrap System.err
-		System.setErr(new PrintStream(new SystemErrWrapper(), true));
+		System.setErr(new PrintStream(new SystemErrWrapper(), true, StandardCharsets.UTF_8.name()));
 
 		server = new HTTPServer(configuration.getServerPort());
 
@@ -729,7 +730,7 @@ public class PMS {
 		ready = true;
 
 		// UPNPHelper.sendByeBye();
-		Runtime.getRuntime().addShutdownHook(new Thread("PMS Listeners Stopper") {
+		Runtime.getRuntime().addShutdownHook(new Thread("UMS Shutdown") {
 			@Override
 			public void run() {
 				try {
@@ -755,6 +756,17 @@ public class PMS {
 				} catch (InterruptedException e) {
 					LOGGER.debug("Caught exception", e);
 				}
+				LOGGER.info("Stopping " + PropertiesUtil.getProjectProperties().get("project.name") + " " + getVersion());
+				/* Stopping logging gracefully (flushing logs)
+				* No logging is available after this point
+				*/
+				ILoggerFactory iLoggerContext = LoggerFactory.getILoggerFactory();
+				if (iLoggerContext instanceof LoggerContext) {
+					((LoggerContext) iLoggerContext).stop();
+				} else {
+					LOGGER.error("Unable to shut down logging gracefully");
+				}
+
 			}
 		});
 
@@ -884,13 +896,13 @@ public class PMS {
 				server.stop();
 				server = null;
 				RendererConfiguration.resetAllRenderers();
-				
+
 				try {
 					Thread.sleep(1000);
 				} catch (InterruptedException e) {
 					LOGGER.trace("Caught exception", e);
 				}
-				
+
 				server = new HTTPServer(configuration.getServerPort());
 				server.start();
 				UPNPHelper.sendAlive();
@@ -1044,6 +1056,7 @@ public class PMS {
 
 	public static void main(String args[]) {
 		boolean displayProfileChooser = false;
+		CacheLogger.startCaching();
 
 		if (args.length > 0) {
 			for (String arg : args) {
@@ -1079,7 +1092,7 @@ public class PMS {
 				if (System.getProperty(NOCONSOLE) == null) {
 					System.setProperty(CONSOLE, Boolean.toString(true));
 				}
-			} 
+			}
 		} catch (Throwable t) {
 			LOGGER.error("Toolkit error: " + t.getClass().getName() + ": " + t.getMessage());
 
@@ -1093,31 +1106,48 @@ public class PMS {
 		}
 
 		try {
-			FileUtils.copyFile(new File("debug.log"), new File("debug.log.prev"));
-		} catch (Exception e) {
-		}
-
-		try {
 			setConfiguration(new PmsConfiguration());
 			assert getConfiguration() != null;
 
-			// Load the (optional) logback config file.
+			/* Rename previous log file to .prev
+			 * Log file location is unknown at this point, it's finally decided during loadFile() below
+			 * but the file is also truncated at the same time, so we'll have to try a qualified guess
+			 * for the file location.
+			 */
+
+			// Set root level from configuration here so that logging is available during renameOldLogFile();
+			LoggingConfig.setRootLevel(Level.toLevel(getConfiguration().getRootLogLevel()));
+			renameOldLogFile();
+
+			// Load the (optional) LogBack config file.
 			// This has to be called after 'new PmsConfiguration'
-			// as the logging starts immediately and some filters
-			// need the PmsConfiguration.
-			// XXX not sure this is (still) true: the only filter
-			// we use is ch.qos.logback.classic.filter.ThresholdFilter
-			LoggingConfigFileLoader.load();
+			LoggingConfig.loadFile();
 
 			// Check TRACE mode
-			ch.qos.logback.classic.Logger l=(ch.qos.logback.classic.Logger)LoggerFactory.getLogger(Logger.ROOT_LOGGER_NAME);
 			if (traceMode == 2) {
+				LoggingConfig.setRootLevel(Level.TRACE);
 				LOGGER.debug("Forcing debug level to TRACE");
-				l.setLevel(ch.qos.logback.classic.Level.TRACE);
 			} else {
 				// Remember whether logging level was TRACE/ALL at startup
-				traceMode = l.getLevel().toInt() <= ch.qos.logback.classic.Level.TRACE_INT ? 1 : 0;
+				traceMode = LoggingConfig.getRootLevel().toInt() <= Level.TRACE_INT ? 1 : 0;
 			}
+
+			// Configure syslog unless in forced trace mode
+			if (traceMode != 2 && configuration.getLoggingUseSyslog()) {
+				LoggingConfig.setSyslog();
+			}
+			// Configure log buffering
+			if (traceMode != 2 && configuration.getLoggingBuffered()) {
+				LoggingConfig.setBuffered(true);
+			} else if (traceMode == 2) {
+				// force unbuffered regardless of logback.xml if in forced trace mode
+				LOGGER.debug("Forcing unbuffered verbose logging");
+				LoggingConfig.setBuffered(false);
+				LoggingConfig.forceVerboseFileEncoder();
+			}
+
+			// Write buffered messages to the log now that logger is configured
+			CacheLogger.stopAndFlush();
 
 			LOGGER.debug(new Date().toString());
 
@@ -1261,7 +1291,7 @@ public class PMS {
 		LOGGER.info("OS: " + System.getProperty("os.name") + " " + getOSBitness() + "-bit " + System.getProperty("os.version"));
 		LOGGER.info("Encoding: " + System.getProperty("file.encoding"));
 		LOGGER.info("Memory: " + memoryInMB + " " + Messages.getString("StatusTab.12"));
-		LOGGER.info("Language: " + getConfiguration().getLanguage());
+		LOGGER.info("Language: " + WordUtils.capitalize(PMS.getLocale().getDisplayName(Locale.ENGLISH)));
 		LOGGER.info("");
 
 		if (Platform.isMac()) {
@@ -1295,6 +1325,30 @@ public class PMS {
 	}
 
 	/**
+	 * Try to rename old logfile to <filename>.prev
+	 */
+	private static void renameOldLogFile() {
+		String fullLogFileName = configuration.getDefaultLogFilePath();
+		String newLogFileName = fullLogFileName + ".prev";
+
+		try {
+			File logFile = new File(newLogFileName);
+			if (logFile.exists()) {
+				Files.delete(logFile);
+			}
+			logFile = new File(fullLogFileName);
+			if (logFile.exists()) {
+				File newFile = new File(newLogFileName);
+				if (!logFile.renameTo(newFile)) {
+					LOGGER.warn("Could not rename \"{}\" to \"{}\"",fullLogFileName,newLogFileName);
+				}
+			}
+		} catch (Exception e) {
+			LOGGER.warn("Could not rename \"{}\" to \"{}\": {}",fullLogFileName,newLogFileName,e);
+		}
+	}
+
+	/**
 	 * Restart handling
 	 */
 	private static void killOld() {
@@ -1315,12 +1369,16 @@ public class PMS {
 		}
 	}
 
+	/*
+	 * This method is only called for Windows OS'es, so specialized Windows charset handling is allowed
+	 */
 	private static boolean verifyPidName(String pid) throws IOException {
 		ProcessBuilder pb = new ProcessBuilder("tasklist", "/FI", "\"PID eq " + pid + "\"", "/V", "/NH", "/FO", "CSV");
 		pb.redirectErrorStream(true);
 		Process p = pb.start();
 		String line;
-		try (BufferedReader in = new BufferedReader(new InputStreamReader(p.getInputStream()))) {
+
+		try (BufferedReader in = new BufferedReader(new InputStreamReader(p.getInputStream(), "cp" + WinUtils.getOEMCP()))) {
 			try {
 				p.waitFor();
 			} catch (InterruptedException e) {
@@ -1355,7 +1413,7 @@ public class PMS {
 	private static void killProc() throws IOException {
 		ProcessBuilder pb = null;
 		String pid;
-		try (BufferedReader in = new BufferedReader(new FileReader(pidFile()))) {
+		try (BufferedReader in = new BufferedReader(new InputStreamReader(new FileInputStream(pidFile()), StandardCharsets.US_ASCII))) {
 			pid = in.readLine();
 		}
 
@@ -1393,7 +1451,7 @@ public class PMS {
 			long pid = getPID();
 			LOGGER.debug("PID: " + pid);
 			String data = String.valueOf(pid) + "\r\n";
-			out.write(data.getBytes());
+			out.write(data.getBytes(StandardCharsets.US_ASCII));
 			out.flush();
 		}
 	}
@@ -1420,22 +1478,96 @@ public class PMS {
 	}
 
 	private static Boolean headless = null;
-	
+
 	/**
 	 * Check if UMS is running in headless (console) mode, since some Linux
 	 * distros seem to not use java.awt.GraphicsEnvironment.isHeadless() properly
 	 */
-	public static boolean isHeadless() {
+	public static synchronized boolean isHeadless() {
 		if (headless == null) {
 			try {
 				JDialog d = new JDialog();
 				d.dispose();
-				headless = new Boolean(false);
+				headless = Boolean.valueOf(false);
 			} catch (NoClassDefFoundError | HeadlessException | InternalError e) {
-				headless = new Boolean(true);				
+				headless = Boolean.valueOf(true);
 			}
-		}		
+		}
 		return headless.booleanValue();
+	}
+
+	private static Locale locale = null;
+	private static ReadWriteLock localeLock = new ReentrantReadWriteLock();
+
+	public static Locale getLocale() {
+		localeLock.readLock().lock();
+		try {
+			return locale;
+		} finally {
+			localeLock.readLock().unlock();
+		}
+	}
+
+	public static void setLocale(Locale aLocale) {
+		localeLock.writeLock().lock();
+		try {
+			locale = (Locale) aLocale.clone();
+		} finally {
+			localeLock.writeLock().unlock();
+		}
+	}
+
+	/**
+	 * Sets UMS locale with the same parameters as the Locale class constructor.
+	 * <code>null</code> values are treated as empty strings.
+	 *
+	 * @param language An ISO 639 alpha-2 or alpha-3 language code, or a language subtag
+     * up to 8 characters in length.  See the <code>Locale</code> class description about
+     * valid language values.
+     * @param country An ISO 3166 alpha-2 country code or a UN M.49 numeric-3 area code.
+     * See the <code>Locale</code> class description about valid country values.
+     * @param variant Any arbitrary value used to indicate a variation of a <code>Locale</code>.
+     * See the <code>Locale</code> class description for the details.
+	 */
+	public static void setLocale(String language, String country, String variant) {
+		if (country == null) {
+			country = "";
+		}
+		if (variant == null) {
+			variant = "";
+		}
+		localeLock.writeLock().lock();
+		try {
+			locale = new Locale(language, country, variant);
+		} finally {
+			localeLock.writeLock().unlock();
+		}
+	}
+
+	/**
+	 * Sets UMS locale with the same parameters as the Locale class constructor.
+	 * <code>null</code> values are treated as empty strings.
+	 *
+	 * @param language An ISO 639 alpha-2 or alpha-3 language code, or a language subtag
+     * up to 8 characters in length.  See the <code>Locale</code> class description about
+     * valid language values.
+     * @param country An ISO 3166 alpha-2 country code or a UN M.49 numeric-3 area code.
+     * See the <code>Locale</code> class description about valid country values.
+	 */
+	public static void setLocale(String language, String country) {
+		setLocale(language, country, "");
+	}
+
+	/**
+	 * Sets UMS locale with the same parameters as the Locale class constructor.
+	 * <code>null</code> values are treated as empty strings.
+	 *
+	 * @param language An ISO 639 alpha-2 or alpha-3 language code, or a language subtag
+     * up to 8 characters in length.  See the <code>Locale</code> class description about
+     * valid language values.
+	 */
+	public static void setLocale(String language) {
+		setLocale(language, "", "");
 	}
 
 	private RemoteWeb web;
@@ -1592,9 +1724,16 @@ public class PMS {
 		}
 	}
 
-	// 0=not started in trace mode, 1=started in trace mode, 2=forced to trace mode
 	private static int traceMode = 0;
 
+	/**
+	 * Returns current trace mode state
+	 *
+	 * @return
+	 *			0 = Not started in trace mode<br>
+	 *			1 = Started in trace mode<br>
+	 *			2 = Forced to trace mode
+	 */
 	public static int getTraceMode() {
 		return traceMode;
 	}
